experiments/manifests/dns-checker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-checker
  namespace: default
  labels:
    app: dns-checker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dns-checker
  template:
    metadata:
      labels:
        app: dns-checker
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
              - labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - dns-checker
                topologyKey: kubernetes.io/hostname
      containers:
        - name: checker
          image: busybox:1.36
          command:
            - /bin/sh
            - -c
            - |
              [...]
